[package]
name = "vast"
version = "0.2.0"
authors = ["Luis Vega <vegaluis@cs.washington.edu>"]
edition = "2018"
description = "Verilog AST library"
repository = "https://github.com/vegaluisjose/vast"
readme = "README.md"
license = "Apache-2.0"
keywords = ["verilog"]
categories = ["hardware","ast"]

[dependencies]
pretty = "0.10.0"
