[package]
name = "vast"
version = "0.3.1"
authors = ["The VAST Developers"]
edition = "2018"
description = "Verilog AST library"
repository = "https://github.com/vegaluisjose/vast"
readme = "README.md"
license = "Apache-2.0"
keywords = ["verilog"]
categories = ["development-tools","data-structures"]

[dependencies]
pretty = "0.10"
itertools = "0.9"
